--- a/wpu-hut/latihan2.html
+++ b/wpu-hut/latihan2.html
@@ -1,16 +1,3 @@
-<?php
-
-$data = file_get_contents('data/pizza.json');
-$menu = json_decode($data, true);
-
-// var_dump($menu);
-// var_dump($menu["menu"][0]["nama"]);
-
-$menu = $menu["menu"];
-
-// echo $menu[0]["nama"];
-
-?>
 
 <!doctype html>
 <html lang="en">
@@ -36,7 +23,11 @@ $menu = $menu["menu"];
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home</a>
+                    <a class="nav-item nav-link active" href="#">All Menu</a>
+                    <a class="nav-item nav-link" href="#">Pizza</a>
+                    <a class="nav-item nav-link" href="#">Pasta</a>
+                    <a class="nav-item nav-link" href="#">Nasi</a>
+                    <a class="nav-item nav-link" href="#">Minuman</a>
                 </div>
             </div>
         </div>
@@ -50,23 +41,7 @@ $menu = $menu["menu"];
             </div>
         </div>
 
-        <div class="row">
-
-            <?php foreach($menu as $row) : ?>
-
-            <div class="col-md-4">
-                <div class="card mb-3 ">
-                    <img src="img/menu/<?= $row["gambar"]; ?>" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title"><?= $row["nama"]; ?></h5>
-                        <p class="card-text"><?= $row["deskripsi"]; ?></p>
-                        <h5 class="card-title">Rp. <?= $row["harga"]; ?></h5>
-                        <a href="#" class="btn btn-primary">Pesan Sekarang</a>
-                    </div>
-                </div>
-            </div>
-
-            <?php endforeach; ?>
+        <div id="daftar-menu" class="row">
 
         </div>
 
@@ -85,5 +60,8 @@ $menu = $menu["menu"];
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+    <script src="js/script.js"></script>
+
   </body>
 </html>
